# ulysses-models

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  exceptions.py  main.py  pyproject.toml  requirements.txt  setup.py
tests/: test_ulysses_models.py
ulysses_models/: __init__.py  exceptions.py  ulysses_models.py
