[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target_version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |migrations
)/
'''

[tool.isort]
skip = ['.venv']
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["google"]
known_first_party = ["ulysses_models"]

[tool.mypy]
ignore_missing_imports = true
allow_untyped_globals = true
allow_redefinition = true
show_error_codes = true
